--- a/平安成电智慧通行.html
+++ b/平安成电智慧通行.html
@@ -46,7 +46,7 @@
       <block>
         <div class="usermotto">
           <!-- <text class="user-motto">{{motto}}</text> -->
-          <text class="auth" id="auth">授权有效！</text>
+          <text class="auth" id="auth">本科用户，入校授权有效！</text>
         </div>
         <!-- <div class="divLine"></div> -->
         <hr align="center" color="#E0E3DA" size="0.5" data-darkreader-inline-color="" style="--darkreader-inline-color:#e5d6bb;">
@@ -76,7 +76,7 @@
                 <div class="register-left">登记类型</div>
               </div>
               <div class="td-right">
-                <div class="register-right">研究生（博士）</div>
+                <div class="register-right">本科生</div>
               </div>
             </div>
             <div class="tr">
